--- a/main.html
+++ b/main.html
@@ -1,20 +1,17 @@
 <html>
 <head>
-    
     <link href="css/snake.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
-    <div id="sn_main">
-        <div id="sn_score"></div>
-        <div id="p1" class="sn_point" style="top:140px;left:100px;z-index: 1;"></div>
-        <div id="p2" class="sn_point" style="top:130px;left:100px;"></div>
-        <div id="p3" class="sn_point" style="top:120px;left:100px;"></div>
-        <div id="p4" class="sn_point" style="top:110px;left:100px;"></div>
-        <div id="p5" class="sn_point" style="top:100px;left:100px;"></div>
-    </div>
-
     <script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
     <script src="js/snake.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+
+            var game = new Snake();
+            game.start();
+        });
+    </script>
 </body>
 </html>
