--- a/main.html
+++ b/main.html
@@ -3,14 +3,19 @@
     <link href="css/snake.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-
+    <div style="margin:100px 100px">
+        <div id="sn_main"></div>
+    </div>
     <script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
     <script src="js/snake.js" type="text/javascript"></script>
     <script type="text/javascript">
         $(document).ready(function () {
 
-            var game = new Snake();
-            game.start();
+            new Snake({
+                width: 300,
+                height: 300,
+                speed: 3
+            }).start();
         });
     </script>
 </body>
