--- a/main.html
+++ b/main.html
@@ -9,13 +9,10 @@
     <script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
     <script src="js/snake.js" type="text/javascript"></script>
     <script type="text/javascript">
+
         $(document).ready(function () {
 
-            new Snake({
-                width: 300,
-                height: 300,
-                speed: 3
-            }).start();
+            new Snake({ speed: 3 }).start();
         });
     </script>
 </body>
