--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 
         $(document).ready(function () {
 
-            new Snake({ speed: 3 }).start();
+            new Snake({ width:250, height:250, speed: 10, auto: true }).start();
         });
     </script>
 </body>
