--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
-<!DOCTYPE html>
 <html>
+<head>
+    <link href="css/snake.css" rel="stylesheet" type="text/css" />
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <div style="margin:100px 100px">
+        <div id="sn_main"></div>
+    </div>
+    <script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
+    <script src="js/snake.js" type="text/javascript"></script>
 </body>
 </html>
